Fixed header blue box being too long

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -35,7 +35,6 @@ header#site-header {
 
         #blue-slant-box {
             background-color: $primary;
-            width: 100vw;
             height: 200px;
         }
     }
